@@ -7,6 +7,7 @@ CHANGELOG
 
 = 2.0.8 =
 -------------------------------------------------
+Added: HTML rel attribute to next/previous.
 
 = 2.0.7 =
 -------------------------------------------------
